--- a/views/patient_home.hbs
+++ b/views/patient_home.hbs
@@ -27,7 +27,12 @@
         <div class="wt-grid-item size-12@p size-12@t">
             <p>Please complete your daily health data</p>
         </div>
-
+        <div class="wt-grid-item size-12@p size-12@t">
+            <div class="support_message">
+                <strong>Your clinician says:</strong>
+                <p>Happy birthday 🎉 </p>
+            </div>
+        </div>
         {{#if lastRecord.glucoseLevel.mandatory}}
         <div class="wt-grid-item size-12@p size-6@t">
             <div class="wt-card wt-padding">
