--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -29,18 +29,8 @@
                         </div>
                     </div>
                     <div class="wt-grid-item size-12@t" style="padding: 5px;">
-                        {{!-- <input readonly type="text" /> --}}
                         <textarea name="text" cols="20" rows="1" id="biodata" readonly>{{clinician.bio}}</textarea>
 
-                        {{!-- <div id="biodata"></div> --}}
-                        {{!-- <div class="wt-card" id="vertical_scroll_card" style="height: 70px; padding:15px">
-                            Bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                            laborum.
-                        </div> --}}
                     </div>
                 </div>
             </div>
@@ -61,77 +51,38 @@
                         <div class="wt-grid-item size-5@t">
                             <label>Email</label>
                             <input readonly type="text" value="{{clinician.email}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         <div class="wt-grid-item size-6@t">
                             <label>Address</label>
                             <input readonly type="text" value="{{clinician.addressInfo.address}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-5@t">
                             <label>Contact Number</label>
                             <input readonly type="text" value="{{clinician.contactNumber}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         <div class="wt-grid-item size-3@t">
                             <label>City/Suburb</label>
                             <input readonly type="text" value="{{clinician.addressInfo.citySuburb}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <label>State</label>
                             <input readonly type="text" value="{{clinician.addressInfo.state}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
-                        {{!-- <div class="wt-grid-item size-3@t">
-                            <label>Password</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
-                        </div> --}}
                         <div class="wt-grid-item size-5@t">
                             <label>Year of Birth</label>
                             <input readonly type="text" value="{{clinician.yearOfBirth}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         <div class="wt-grid-item size-3@t">
                             <label>Country</label>
                             <input readonly type="text" value="{{clinician.addressInfo.country}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <label>Postcode</label>
                             <input readonly type="text" value="{{clinician.addressInfo.postcode}}" />
-                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
-                                Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua.
-                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                     </div>
@@ -154,11 +105,11 @@
                         <div class="wt-grid-item size-5@t"></div>
                         <div class="wt-grid-item size-6@t">
                             <label>Given Name/s</label>
-                            <input name="givenName" type="text" value={{clinician.givenName}} />
+                            <input required name="givenName" type="text" value={{clinician.givenName}} />
                         </div>
                         <div class="wt-grid-item size-6@t">
                             <label>Family Name</label>
-                            <input name="familyName" type="text" value={{clinician.familyName}} />
+                            <input required name="familyName" type="text" value={{clinician.familyName}} />
                         </div>
                         <div class="wt-grid-item size-9@t">
                             <label>Headline</label>
@@ -210,7 +161,7 @@
                         </div>
                         <div class="wt-grid-item size-6@t">
                             <label>Email</label>
-                            <input name="email" type="email" value="{{clinician.email}}" />
+                            <input readonly name="email" type="email" value="{{clinician.email}}" />
                         </div>
                         <div class="wt-grid-item size-6@t">
                             <label>Address</label>
@@ -218,7 +169,7 @@
                         </div>
                         <div class="wt-grid-item size-6@t">
                             <label>Contact Number</label>
-                            <input name="contactNumber" type="text" value="{{clinician.contactNumber}}" />
+                            <input required name="contactNumber" type="text" pattern="\d*" minlength="10" maxlength="10" value="{{clinician.contactNumber}}" />
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <label>City/Suburb</label>
@@ -235,7 +186,7 @@
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <label>Year of Birth</label>
-                            <input name="yearOfBirth" type="text" pattern="\d*" placeholder="YYYY" maxlength="4"
+                            <input required name="yearOfBirth" type="text" pattern="\d*" placeholder="YYYY" maxlength="4"
                                 value="{{clinician.yearOfBirth}}" />
                         </div>
                         <div class="wt-grid-item size-3@t">
