--- a/views/clinician_patients_comments.hbs
+++ b/views/clinician_patients_comments.hbs
@@ -24,49 +24,138 @@
                         <strong>Comments</strong>
                     </div>
                 </div>
-            </div>   
+            </div>
 
             {{#each patients}}
+            {{#if (or (checkLength healthData.glucoseLevel.comment) (checkLength
+            healthData.weight.comment) (checkLength healthData.insulinDoses.comment) (checkLength
+            healthData.exercise.comment))}}
             <div class="wt-card">
                 <div class="wt-card-content">
                     <div class="wt-grid-container">
                         {{!-- <div class="wt-grid-item size-1@t">
                             <img class="wt-border-rounded" src="/assets/img/patient_img.png" width="40px">
                         </div> --}}
-                        <div class="wt-grid-item size-2@t" style="padding-left: 5%;" >
-                            data
+                        <div class="wt-grid-item size-2@t" style="padding-left: 5%;">
+                            {{healthData.date}}
+
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <div class="wt-grid-container">
                                 <div class="wt-grid-item size-3@t" style="padding: 0%;">
-                                    <img class="wt-border-rounded" src="/assets/img/patient_img.png" width="40px">
+                                    <img class="wt-border-rounded" src="{{patientData.urlImage}}" width="35px">
                                 </div>
                                 <div class="wt-grid-item size-9@t" style="padding: 0%; padding-top:2.5%">
-                                    <a href="./clinician_dashboard/{{_id}}/clinician_patient_data">
-                                        {{givenName}} {{familyName}}
+                                    <a href="./clinician_dashboard/{{patientData._id}}/clinician_patient_data">
+                                        {{patientData.givenName}} {{patientData.familyName}}
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <div class="wt-grid-item size-3@t" style="text-align:center; padding-right: 5%;">
-                            data
+
+                        {{#if (checkLength healthData.glucoseLevel.comment)}}
+
+                        <div class="wt-grid-item size-3@t"
+                            style="text-align:center; padding-right: 5%; margin-left:40%; margin-top:-6.5%;">
+                            Glucose level
                         </div>
-                        <div class="wt-grid-item size-4@t" style="padding: 0%;">
-                            <div class="wt-grid-item size-12@t">
-                                <textarea readonly rows="5">Comments here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
-                                {{!-- <div class ="wt-card" id="vertical_scroll_card" style="height: 70px; padding:15px">
-                                    Comments here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <div class="wt-grid-item size-4@t" style="padding: 0%; margin-top:-5.5%;">
+                            <div class="wt-grid-item size-12@t" style="align-items: center;margin-top:-5%;">
+                                {{!-- <div class="wt-card" id="vertical_scroll_card"> --}}
+                                    <a href="./clinician_dashboard/{{patientData._id}}/clinician_patient_data">
+                                        {{!-- <input type="text" readonly name="glucose" id="glu"
+                                            value="{{healthData.glucoseLevel.comment}}" style="margin: 0;"> --}}
+                                        <textarea name="glucose" id="glu" cols="6" rows="1"
+                                            style="margin: 0;">{{healthData.glucoseLevel.comment}}</textarea>
+                                    </a>
+                                    {{!--
                                 </div> --}}
                             </div>
                         </div>
+                        {{/if}}
+
+                        {{#if (checkLength healthData.weight.comment)}}
+
+                        <div class="wt-grid-item size-3@t"
+                            style="text-align:center; padding-right: 5%; margin-left:40%; margin-top:-2%;">
+                            Weight
+                        </div>
+                        <div class="wt-grid-item size-4@t" style="padding: 0%;margin-top:-3%;">
+                            <div class="wt-grid-item size-12@t" style="align-items: center;">
+                                {{!-- <div class="wt-card" id="vertical_scroll_card"> --}}
+                                    <a href="./clinician_dashboard/{{patientData._id}}/clinician_patient_data">
+                                        {{!-- <input type="text" readonly name="glucose" id="glu"
+                                            value="{{healthData.weight.comment}}" style="margin: 0;"> --}}
+                                        <textarea name="weight" id="wei" cols="6" rows="1"
+                                            style="margin: 0;">{{healthData.weight.comment}}</textarea>
+                                    </a>
+                                    {{!--
+                                </div> --}}
+                            </div>
+                        </div>
+                        {{/if}}
+                        {{#if (checkLength healthData.insulinDoses.comment 0) }}
+
+
+                        <div class="wt-grid-item size-3@t"
+                            style="text-align:center; padding-right: 5%; margin-left:40%; margin-top:-1%;">
+                            Insulin Doses
+                        </div>
+                        <div class="wt-grid-item size-4@t" style="padding: 0%; margin-top:-2%;">
+                            <div class="wt-grid-item size-12@t" style="align-items: center;">
+
+                                {{!-- <div class="wt-card" id="vertical_scroll_card"> --}}
+                                    <a href="./clinician_dashboard/{{patientData._id}}/clinician_patient_data">
+                                        {{!-- <input type="text" readonly name="glucose" id="glu"
+                                            value="{{healthData.insulinDoses.comment}}" style="margin: 0;"> --}}
+
+                                        <textarea name="Insu" id="Ins" cols="6" rows="1"
+                                            style="margin: 0;">{{healthData.insulinDoses.comment}}</textarea>
+
+
+                                    </a>
+                                    {{!--
+                                </div> --}}
+                            </div>
+                        </div>
+                        {{/if}}
+                        {{#if (checkLength healthData.exercise.comment)}}
+
+
+
+                        <div class="wt-grid-item size-3@t"
+                            style="text-align:center; padding-right: 5%; margin-left:40%;margin-top:-1%;">
+                            Exercise
+                        </div>
+                        <div class="wt-grid-item size-4@t" style="padding: 0%;margin-top:-2%;">
+                            <div class="wt-grid-item size-12@t" style="align-items: center;">
+
+                                {{!-- <div class="wt-card" id="vertical_scroll_card"> --}}
+                                    <a href="./clinician_dashboard/{{patientData._id}}/clinician_patient_data">
+                                        {{!-- <input type="text" readonly name="glucose" id="glu"
+                                            value="{{healthData.exercise.comment}}" style="margin: 0;"> --}}
+
+                                        <textarea name="Exercise" id="Exe" cols="6" rows="1"
+                                            style="margin: 0;">{{healthData.exercise.comment}}</textarea>
+                                    </a>
+                                    {{!--
+                                </div> --}}
+                            </div>
+                        </div>
+
+                        {{/if}}
                     </div>
                 </div>
             </div>
-            <br/>
-            {{/each}} 
+            <br />
+            {{/if}}
+
+            {{/each}}
         </div>
 
 
     </div>
 </div>
-   
+<script>
+    initSocket();
+</script>
