fetched supportMessage into patient_records

--- a/views/patient_home.hbs
+++ b/views/patient_home.hbs
@@ -30,7 +30,7 @@
         <div class="wt-grid-item size-12@p size-12@t">
             <div class="support_message">
                 <strong>Your clinician says:</strong>
-                <p>Happy birthday 🎉 </p>
+                <p>{{supportMessage}}</p>
             </div>
         </div>
         {{#if lastRecord.glucoseLevel.mandatory}}
