--- a/views/patient_home.hbs
+++ b/views/patient_home.hbs
@@ -27,12 +27,14 @@
         <div class="wt-grid-item size-12@p size-12@t">
             <p>Please complete your daily health data</p>
         </div>
+        {{#if supportMessage}}
         <div class="wt-grid-item size-12@p size-12@t">
             <div class="support_message">
                 <strong>Your clinician says:</strong>
                 <p>{{supportMessage}}</p>
             </div>
         </div>
+        {{/if}}
         {{#if lastRecord.glucoseLevel.mandatory}}
         <div class="wt-grid-item size-12@p size-6@t">
             <div class="wt-card wt-padding">
