Updated engagement rate in clinician's view of patient

--- a/views/clinician_patient_data.hbs
+++ b/views/clinician_patient_data.hbs
@@ -28,7 +28,7 @@
 
             {{!-- Engagement Rate --}}
             <div class="wt-grid-item size-12@p size-12@t">
-                <h4>Engagement Rate : __%</h4>
+                <h4>Engagement Rate : {{engagementRate}}%</h4>
             </div>
 
             {{!-- Fetch database data --}}
