Edited required fields in adding patients, messages and notes

--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -232,7 +232,7 @@
                     </div>
                     <div class="wt-grid-item size-12@t">
                         <label>Bio</label>
-                        <textarea required rows="5" name="bio"></textarea>
+                        <textarea rows="5" name="bio"></textarea>
                     </div>
                     <div class="wt-grid-item size-12@t">
                         <div class="wt-text-align-right">
