--- a/views/clinician_patient_notes.hbs
+++ b/views/clinician_patient_notes.hbs
@@ -63,7 +63,7 @@
 
                     {{!-- Text Area for Note --}}
                     <div class="wt-grid-item size-12@t">
-                        <textarea placeholder="Enter clinical note..." rows="5" name="message"></textarea>
+                        <textarea required placeholder="Enter clinical note..." rows="5" name="message"></textarea>
                     </div>
                     
                     {{!-- Save Button --}}
