--- a/views/clinician_patient_support_messages.hbs
+++ b/views/clinician_patient_support_messages.hbs
@@ -63,7 +63,7 @@
 
                     {{!-- Text Area for Message --}}
                     <div class="wt-grid-item size-12@t">
-                        <textarea placeholder="Enter messsage..." rows="5" name="message"></textarea>
+                        <textarea required placeholder="Enter messsage..." rows="5" name="message"></textarea>
                     </div>
                     
                     {{!-- Send Button --}}
