fixed engagement rate

--- a/views/patient_leaderboard.hbs
+++ b/views/patient_leaderboard.hbs
@@ -24,7 +24,7 @@
         <div class="wt-grid-item size-12@p size-12@t">
             My Engagement rate: {{engagementRate}}%
         </div>
-        {{!#if (hasBadged engagementRate)}}
+        {{#if (hasBadged engagementRate)}}
         <div class="wt-grid-item size-12@p size-12@t">
             Your rate is over 80% you won a badge. Congratulations 🎉
         </div>
