Added Pending functionality to patient records

--- a/views/patient_records.hbs
+++ b/views/patient_records.hbs
@@ -99,8 +99,8 @@
                                 {{{glucoseLevel.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -117,8 +117,8 @@
                                 {{{weight.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -136,8 +136,8 @@
                                 {{{insulinDoses.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -154,8 +154,8 @@
                                 {{{exercise.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
