Added date to clinician's view of Patient comments

--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -5,7 +5,7 @@
         {{!-- Profile Picture --}}
         <div class="wt-grid-item size-5@t display_flex_center">
             <div class="wt-grid-item size-12@t display_flex_center">
-                <img class="wt-border-circle" src="/assets/img/Doctor.jpg" id="clinician_img" width="180px"
+                <img class="wt-border-circle" src={{clinician.urlImage}} id="clinician_img" width="180px"
                     height="180px" style="cursor: pointer;" onclick="openModal('UpdateProfilePictureModal')">
             </div>
             <div class="wt-grid-item size-12@t" style="">
