--- a/views/clinician_patients_comments.hbs
+++ b/views/clinician_patients_comments.hbs
@@ -3,9 +3,12 @@
 <div class="panel-content">
     <div class="wt-grid-container">
 
-        {{!-- Heading--}}
+        {{!-- Heading and Subheading --}}
         <div class="wt-grid-item size-12@t">
             <h1>Comments</h1>
+            <p style="display: inline;">Today :
+            <p id="date" style="display: inline;">{{dateFormat todayDate}} </p>
+            </p>
         </div>
 
         <div class="wt-grid-item size-12@t">
