Changed facebook and instagram icons

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -92,8 +92,8 @@
                 <p class="wt-color-white"> © Diabetes@Home 2022. All Rights Reserved </p>
             </div>
             <div class="wt-grid-item size-12@p size-6@t wt-text-align-right">
-                <span class="wt-padding-small"><a href="https://instagram.com" target="_blank"><img src="./assets/img/facebook-icon.png" alt="" width="30px"></a></span>
-                <span class="wt-padding-small"><a href="https://facebook.com" target="_blank"><img src="./assets/img/insta-icon.png" alt="" width="30px"></a></span>
+                <span class="wt-padding-small"><a href="https://instagram.com" target="_blank"><img src="./assets/img/insta-icon.png" alt="" width="30px"></a></span>
+                <span class="wt-padding-small"><a href="https://facebook.com" target="_blank"><img src="./assets/img/facebook-icon.png" alt="" width="30px"></a></span>
             </div>
         </div>
     </section>
