removed unwanted code, added pending

--- a/views/patient_records.hbs
+++ b/views/patient_records.hbs
@@ -65,18 +65,6 @@
                     <div class="wt-grid-item size-2@t">
                         <strong>Exercise</strong>
                     </div>
-                    {{!<strong>Blood Glucose Level</strong>
-                    <div class="wt-grid-item">
-                        <strong>Weight</strong>
-                    </div>
-                    <div class="wt-grid-item">
-                        <strong>Insulin Doses</strong>
-                    </div>
-                    <div class="wt-grid-item">
-                        <strong>Exercise</strong>
-                    </div>
-                    <div class="wt-grid-item">
-                    </div>}}
                 </div>
             </div>
             {{!-- Patient Data Card Table Content --}}
@@ -99,8 +87,8 @@
                                 {{{glucoseLevel.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -117,8 +105,8 @@
                                 {{{weight.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -136,8 +124,8 @@
                                 {{{insulinDoses.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -154,8 +142,8 @@
                                 {{{exercise.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -181,8 +169,8 @@
                                 {{{glucoseLevel.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -202,8 +190,8 @@
                                 {{{weight.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -224,8 +212,8 @@
                                 {{{insulinDoses.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
@@ -245,8 +233,8 @@
                                 {{{exercise.value}}}
                             </span>
                             {{else}}
-                            <span>
-                                -
+                            <span class="wt-color-amber">
+                                Pending
                             </span>
                             {{/if}}
                             {{else}}
