Added edit pencil in clinician profile

--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -11,6 +11,8 @@
             <div class="wt-grid-item size-12@t" style="">
                 <h3>{{clinician.givenName}} {{clinician.familyName}}</h3>
                 <p style="color: grey; font-size:small;">{{clinician.headline}}</p>
+                <i class="material-icons" style="font-size: large; color:gray; cursor: pointer"
+                    onclick="openModal('UpdateProfilePictureModal')">edit</i>
             </div>
         </div>
 
