Fixed clinician profile picture URL

--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -121,7 +121,8 @@
                             <h2>Edit Profile Picture and </h2>
                         </div>
                         <div class="wt-grid-item size-5@t">
-                            <input name="profilePic" type="file" accept="image/*" />
+                            <label>Profile Picture URL</label>
+                            <input name="urlImage" type="text"/>
                         </div>
                         <div class="wt-grid-item size-5@t"></div>
                         <div class="wt-grid-item size-6@t">
